apps/qbittorrent/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: nas-media
          persistentVolumeClaim:
            claimName: nas-media
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: qbittorrent-defaults
          configMap:
            name: qbittorrent-defaults
        - name: tailscale-tmp
          emptyDir: {}
        - name: tailscale-state
          persistentVolumeClaim:
            claimName: ts-state
      containers:
        - name: qbittorrent
          image: ghcr.io/home-operations/qbittorrent:5.1.2@sha256:31ac39705e31f7cdcc04dc46c1c0b0cdf8dc6f9865d4894efc097a33adc41524
          volumeMounts:
            - name: config
              mountPath: /config
            - name: nas-media
              mountPath: /media
            - name: qbittorrent-defaults
              mountPath: /defaults/qBittorrent.conf
              subPath: qBittorrent.conf
              readOnly: true
          resources:
            requests:
              memory: 100M
            limits:
              memory: 2G
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:apps
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [qbittorrent]
